--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
@@ -24,11 +24,11 @@
                     <li>@Html.ActionLink("Начало", "Index", "Home")</li>
                     <li>@Html.ActionLink("Публикации", "Index", "Posts")</li>
                     <li>@Html.ActionLink("Нов пост", "Create", "Posts")</li>
-                    <li>@Html.ActionLink("Фотоалбум", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Класиране", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Участници", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Фотоалбум", "Photoalbum", "Home")</li>
+                    <li>@Html.ActionLink("Класиране", "Ranking", "Home")</li>
+                    <li>@Html.ActionLink("Участници", "Players", "Home")</li>
                     <li>@Html.ActionLink("История", "History", "Home")</li>
-                    <li>@Html.ActionLink("Подготовка", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Подготовка", "Preparation", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
