--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><img src="~/Images/Olympic_Rings.svg.png" alt="Olympic Rings" height="32" width="62" /></li>
                     <li>@Html.ActionLink("Начало", "Index", "Home")</li>
                     <li>@Html.ActionLink("Публикации", "Index", "Posts")</li>
                     <li>@Html.ActionLink("Нов пост", "Create", "Posts")</li>
