View/Home/Ranking[changes]
added some text

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
@@ -5,3 +5,35 @@
 
 <h2>Класиране</h2>
 
+<body>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Countries</h2>
+            <ol>
+                <li>
+                    <a href="https://www.google.bg/#q=%D0%BE%D0%BB%D0%B8%D0%BC%D0%BF%D0%B8%D0%B9%D1%81%D0%BA%D0%B8+%D0%B8%D0%B3%D1%80%D0%B8+2016+%D0%BA%D0%BB%D0%B0%D1%81%D0%B8%D1%80%D0%B0%D0%BD%D0%B5+%D0%BF%D0%BE+%D0%BC%D0%B5%D0%B4%D0%B0%D0%BB%D0%B8&mie=oly%2C%5B%22%2Fm%2F012nfc7z%22%2C3%2C%22o%22%2C2%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C16%5D">
+                        Съединени щати
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.google.bg/#q=%D0%BE%D0%BB%D0%B8%D0%BC%D0%BF%D0%B8%D0%B9%D1%81%D0%BA%D0%B8+%D0%B8%D0%B3%D1%80%D0%B8+2016+%D0%BA%D0%BB%D0%B0%D1%81%D0%B8%D1%80%D0%B0%D0%BD%D0%B5+%D0%BF%D0%BE+%D0%BC%D0%B5%D0%B4%D0%B0%D0%BB%D0%B8&mie=oly%2C%5B%22%2Fg%2F11c44dw0hn%22%2C3%2C%22o%22%2C2%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C16%5D">
+                        Великобритания
+                    </a>
+
+                </li>
+                <li>
+                    <a href="https://www.google.bg/#q=%D0%BE%D0%BB%D0%B8%D0%BC%D0%BF%D0%B8%D0%B9%D1%81%D0%BA%D0%B8+%D0%B8%D0%B3%D1%80%D0%B8+2016+%D0%BA%D0%BB%D0%B0%D1%81%D0%B8%D1%80%D0%B0%D0%BD%D0%B5+%D0%BF%D0%BE+%D0%BC%D0%B5%D0%B4%D0%B0%D0%BB%D0%B8&mie=oly%2C%5B%22%2Fm%2F011smmy2%22%2C3%2C%22o%22%2C2%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C16%5D">
+                        Китай
+                    </a>
+
+                </li>
+                <li>
+                    <a href="https://www.google.bg/#q=%D0%BE%D0%BB%D0%B8%D0%BC%D0%BF%D0%B8%D0%B9%D1%81%D0%BA%D0%B8+%D0%B8%D0%B3%D1%80%D0%B8+2016+%D0%BA%D0%BB%D0%B0%D1%81%D0%B8%D1%80%D0%B0%D0%BD%D0%B5+%D0%BF%D0%BE+%D0%BC%D0%B5%D0%B4%D0%B0%D0%BB%D0%B8&mie=oly%2C%5B%22%2Fm%2F011stnv9%22%2C3%2C%22o%22%2C2%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C16%5D">
+                        Русия
+                    </a>
+
+                </li>
+            </ol>
+
+        </div>
+</body>
