New Background Images
Photoshopped images

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/History.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/History.cshtml
@@ -4,5 +4,7 @@
 @{
     ViewBag.Title = "История";
 }
+<body class="body-posts">
+    <h2>История на Олимпийските игри</h2>
 
-<h2>История на Олимпийските игри</h2>
+</body>
