--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Подготовка";
 }
+<body class="body-posts">
+    <h2>Подготовка за Рио2016</h2>
 
-<h2>Подготовка за Рио2016</h2>
-
+</body>
