--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Класиране по медали";
+    ViewBag.Title = "Класиране";
 }
-<body class="body-posts">
-    <h2>Класиране по медали</h2>
 
-</body>
+<h2>Класиране</h2>
+
