--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Account/Login.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Account/Login.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Вход";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Използвай създадения акаунт</h4>
+                <h4>Използвай създадения акаунт.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -38,16 +38,22 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Влез" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Регистрирай се", "Register")
+                    @Html.ActionLink("Register as a new user", "Register")
                 </p>
+                @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
-                        @Html.ActionLink("Забравена парола?", "ForgotPassword")
-                    </p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
             }
+        </section>
+    </div>
+    <div class="col-md-4">
+        <section id="socialLoginForm">
+            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
 </div>
