--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Account/ResetPassword.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Account/ResetPassword.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MVCBlog.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Смени паролата";
+    ViewBag.Title = "Reset password";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Смени паролата</h4>
+    <h4>Reset your password.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Смени" />
+            <input type="submit" class="btn btn-default" value="Reset" />
         </div>
     </div>
 }
