--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewBag.Title = "Подготовка";
 }
-<body class="body-posts">
-    <h2>Подготовка за Рио2016</h2>
 
-</body>
+<h2>Подготовка</h2>
+
