--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Index.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Index.cshtml
@@ -49,9 +49,9 @@
                         }
                     </td>
                     <td>
-                        @Html.ActionLink("Редактирай", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Детайли", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Изтрий", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                     </td>
                 </tr>
                 }
