--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/History.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/History.cshtml
@@ -4,5 +4,52 @@
 @{
     ViewBag.Title = "История";
 }
+<body class="body-posts">
+    <div class="row">
+        <div class="post col-md-6">
+            <h2>История на oлимпийските игри</h2>
+            <div><p>Олимпийските игри (на френски: Jeux olympiques; на английски: Olympic Games) или олимпиадата е най-известното международно състезание в света, в което атлети от над 200 страни и различни спортове се състезават за златни, сребърни и бронзови медали. Олимпиади се провеждат на всеки 4 години.</p></div>
 
-<h2>История на Олимпийските игри</h2>
+            <h2>Древни олимпийски игри</h2>
+            <div><p>Древните олимпийски игри се провеждат в чест на Зевс Олимпийски в град Олимпия (в провинцията Елида в Пелопонес в Древна Гърция). Те били най-прочутите и най-бляскавите. След като историкът Тимей от Таормина въвежда изчислението на времето по олимпиади след 776 г. пр.н.е. се счита, че тези игри са се устройвали на всеки четири години през юли и август. През класическата епоха траели пет дни. От 572 г. пр.н.е. елейците започнали да организират игрите. Избирали хеланодиките (съдиите) помежду си. Известно време преди откриването на игрите се изпращали вестители (нар. спондофори) по всички гръцки градове. В чест на Зевс се сключвало свещено примирие, с което се гарантирало безопасното придвижване на всички участници и зрители до Олимпия, както и ненападението на Елис – града-организатор на състезанията. Около светилището в Елида се образувал себеподобен град от палатките на участниците и зрителите на игрите непосредствено преди започването им. През първия ден от игрите се правели жертвоприношения. Участниците можело да бъдат само гърци, които са по рождение свободни и неосъждани, тъй като игрите са част от култа. Ето защо „варварите“, робите и осъдените нямали достъп до тях. Също така религиозно предписание забранява присъствието на жени. В първия ден от игрите се полагали олимпийски клетви. Тържественият ритуал се извършвал пред олтара на Зевс Хоркиос (покровител на клетвите). По този случай се принасял в жертва шопар, върху чиито четвъртини атлетите се заклевали да спазват правилата на игрите. Има сведения, че в противен случай хеланодиките налагали тежка глоба на нарушителя и той нямал право никога повече да участва.</p></div>
+        
+            <h2>Възраждане на олимпийската идея</h2>
+            <div><p>Олимпийската идея не изчезва съвсем след забраната на античните състезания. Например в Англия през XVIII век нееднократно се провеждат „олимпийски“ съревнования. По-късно подобни прояви се организират във Франция и Гърция. Все пак това са малки състезания, носещи в най-добрия случай регионален характер. Първите настоящи предшественици на съвременните олимпийски игри са „Олимпиите“, които се провеждат регулярно в периода 1859 – 1888 г. Идеята за възраждането на Олимпийските игри в Гърция принадлежи на поета Панайотис Суцос.
+
+През 1766 г. в резултат на археологически разкопки в Олимпия са открити спортни и храмови постройки. През 1875 г. археологическите проучвания и разкопки продължават под германско ръководство. По това време в Европа са на мода романтично-идеалистичните представи за античността. Желанието да се съживят олимпийският дух и култура се разпространява бързо в цяла Европа. Френският барон Пиер дьо Кубертен, който разбира последствията от приноса на Франция, казва: „Германия откри това, което е останало от древна Олимпия. Защо Франция да не може да възстанови старото величие?“.
+
+По мнението на Кубертен именно слабото физическо състояние на френските войници е една от причините за пораженията на французите във Френско-пруската война от 1870 – 1871 г. Той се стреми да промени ситуацията чрез подобряване на физическата култура на французите. В същото време той иска да преодолее националния егоизъм и да допринесе за борбата за мир и международно разбирателство. „Младежта на света“ трябва да мери сили в спорта, а не на бойното поле. В очите на Кубертен възраждането на Олимпийските игри като че ли е най-доброто решение за постигането и на двете цели.
+                
+                     На конгрес проведен от 16 до 23 юни 1894 г. в Сорбоната той представя своите идеи на международната общественост. В последния ден на конгреса е решено, че „първите съвременни Олимпийски игри“ ще се проведат през 1896 г. в Атина – в страната-родоначалник на игрите Гърция. С цел да организира игрите е основан Международният олимпийски комитет (МОК). Първият президент на Комитета е гъркът Димитриос Викелас, който е президент до края на първите Летни олимпийски игри. Генерален секретар е барон дьо Кубертен.
+
+                     Първите съвременни игри преминават с голям успех. Въпреки факта, че участие в Игрите вземат общо 241 спортисти (от 14 страни), игрите са най-голямото спортно събитие дотогава в историята, от времената на Древна Гърция. Гръцките официални власти са толкова доволни, че внасят предложение за „вечно“ провеждане на Олимпиадата в родината им Гърция. Но МОК въвежда принцип на ротация между различни държави, така че на всеки четири години игрите да сменят мястото си на провеждане.
+
+                     След първия успех, олимпийското движение изпитва и първата си криза. Вторите през 1900 г. в Париж, Франция, и Третите олимпийски игри през 1904 г. в Сейнт Луис, САЩ са проведени съвместно със Световното изложение. Спортните съревнования продължават с месеци и почти не предизвикват интерес от страна на зрителите. На Олимпиадата в Париж да първи път участват и жени. На Олимпиадата в Сейнт Луис участват почти само американски спортисти, тъй като организирането на пътуването на отборите от Европа през океана в тези години не е лесно.
+
+                     На извънредната Олимпиада през 1906 г., проведена в Атина, спортните съревнования и постижения отново излизат на първо място. Въпреки, че първоначално МОК признава и подкрепя провеждането на „междинни игри“ (само две години след предните), по-късно те не се признават за олимпийски. Някои спортни историци смятат игрите от 1906 г. за спасение на олимпийската идея, тъй като не позволяват игрите да бъдат счетени за „безсмислени и ненужни“.                
+                </p></div>
+
+            <h2>Съвременни олимпийски игри</h2>
+            <div><p>Модерните олимпийски игри се подновяват през 1896 г. по идея на Пиер Дьо Кубертен, които се провеждат в Атина. Съвременното олимпийско движение се ръководи от Международния олимпийски комитет.
+
+През 1904 г. в Сейнт Луис за първи път в Игрите участват цветнокожи състезатели.
+
+В началото право на участие в олимпийските игри получават единствено аматьори. Строгостта на МОК стига до там, че олимпийският шампион в десетобоя и петобоя от игрите в Стокхолм през 1912 г., Джим Торп, губи медалите си защото веднъж получил пари за участието си в полупрофесионален бейзболен отбор по време на студентските си години. През 1955 г. президентът на МОК Ейвъри Ейвъри Бръндидж заявява „Можем да разчитаме на подкрепата на тези, които вярват в принципите на честната игра и спортсменството, олицетворени в аматьорския код, в усилията ни да предотвратим използването на Игрите от индивиди, организации и нации за неясни цели“.
+
+С поемането на президентския пост на МОК от Майкъл Морис за първи път се дава право на участие на професионални спортисти. Телевизията оказва голямо влияние за решението, тъй като публиката предпочита да гледа познати атлети. Аргумент в полза на допускането на професионални атлети е и подозрението, че атлетите от Източния блок де факто са професионалисти, въпреки че имат аматьорски статут. Така през 1980-те години професионализирането на олимпийските игри започва и завършва с участието на т. нар. „Дрийм тийм“, отборът-мечта, на баскетболния турнир в Барселона през 1992 г., когато отборът на САЩ се състои от професионалисти от НБА.
+
+На Игрите в Лондон през 2012 г. за първи път всяка участваща държава номинира за участие поне по една жена.
+
+Спонсорите не олимпийските игри имат право да се наричат „олимпийски спонсор“ и да се идентифицират с олимпийската идея, но не получават видимост в самите спортни съоръжения. Всеки спонсор е единствен за вида продукт, който предлага.</p></div>
+        </div>
+
+        <div class="post col-md-6">
+            <h2></h2>
+            <div><img src="~/Images/Athens_1896_report_cover.jpg" alt="1896" width="500" height="800" /><b>Плакат на първите олимпийски игри</b></div><br />
+            <h2></h2>
+            <div><img src="~/Images/800px-Baron_Pierre_de_Coubertin.jpg" alt="baron" width="500" height="800" /><b>Барон Пиер дьо Кубертен</b></div><br />
+            <h2></h2>
+            <div><img src="~/Images/800px-2002_Winter_Olympics_flame.jpg" alt="fire" width="500" height="800" /><b>Олимпийският огън – символ на oлимпийските игри</b></div>
+        </div>
+    </div>
+</body>
