--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Класиране";
+    ViewBag.Title = "Класиране по медали";
 }
+<body class="body-posts">
+    <h2>Класиране по медали</h2>
 
-<h2>Класиране</h2>
-
+</body>
