--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("Начало", "Index", "Home")</li>
                     <li>@Html.ActionLink("Публикации", "Index", "Posts")</li>
                     <li>@Html.ActionLink("Нов пост", "Create", "Posts")</li>
-                    <li>@Html.ActionLink("Фотоалбум", "Photoalbum", "Home")</li>
+                    <li>@Html.ActionLink("Фотоалбум", "Index", "Photoalbums")</li>
                     <li>@Html.ActionLink("Класиране", "Ranking", "Home")</li>
                     <li>@Html.ActionLink("Участници", "Players", "Home")</li>
                     <li>@Html.ActionLink("История", "History", "Home")</li>
