--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - Рио 2016</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @using MVCBlog.Classes
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
