--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Изтриване на пост</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Сигурни ли сте, че желаете да изтриете това?</h3>
 <div>
-    <h4>Post</h4>
+    <h4>Пост</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -41,7 +41,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Изтрий" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
