--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Players.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Players.cshtml
@@ -3,35 +3,48 @@
     ViewBag.Title = "Участници";
 }
 <body class="body-posts">
-<h2>Участници</h2>
+    <div class="row">
+        <div class="post col-md-6">
+            <h2>Рио 2016</h2>
+            <div>
+                <p>
+                    XXXI-те летни олимпийски игри се проведоха от 5 до 21 август 2016 г. в град Рио де Жанейро, Бразилия. Това са първите олимпийски игри, проведени в Южна Америка. Участваха 205 страни с общ брой участници надвишаващ 11000.
+                    Държавата с най-голям брой участвали атлети е САЩ (552-ма), а тази с най-малко - Тувалу (1).
+                </p>
+            </div>
+
+            <h2>България в Рио 2016</h2>
+            <div>
+                <p>
+                    Тази година на олимпиадата България бе представена от 51 атлети, сред които Григор Димитров, Ивет Лалова, Цветана Пиронкова и др. Те участваха в общо 15 различни дисциплини.
+                    Пълния списък с българските атлети, участвали в олимпиадата можете да намерите <a href="https://www.google.bg/?ion=1&espv=2#q=rio2016&mie=oly%2C%5B%22%2Fm%2F03tnk7%22%2C1%2C%22a%22%2C1%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C%22%2Fm%2F011v5wq5%22%2Cnull%2C%22%22%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C0%5D">тук</a>.
+                </p>
+            </div>
+
+            <h2>Отбор на бежанци</h2>
+            <div>
+                <p>
+                    За първа година отбор на бежанците участва на Олимпиадата в Рио. 10 състезатели от Конго, Южен Судан, Сирия и Етиопия излязоха на откриването на Игрите под звуците на олимпийския химн и носейки олимпийския флаг. Идеята на отбора е много по-голяма от самата победа. Да послужи като символ на надеждата за милионите, които бягат от глад и война по целия свят.
+                </p>
+            </div>
+        </div>
+
+
+        <div class="post col-md-6">
+            <h2></h2>
+            <div>
+                <img src="~/Images/rio2016logo.jpg" alt="logo" width="500" height="250" /><center><b>Логото на Рио 2016</b></center>
+            </div>
+            <h2></h2>
+            <div>
+
+                <img src="~/Images/bulgaria_rio2016.jpg" alt="Bulgaria" height="300" width="500" align="middle" /><center><b>Българските атлети, носещи знамето на България</b></center>
+            </div>
+            <h2></h2>
+            <div>
+                <img src="~/Images/otborbejanci.jpg" alt="fire" width="500" height="300" /><center><b>Част от отбора на бежанците</b></center>
+            </div>
+        </div>
+    </div>
 </body>
-
-<div class="row">
-    <div class="post col-md-6">
-        <h2>Рио 2016</h2>       
-        <div>
-            В летните олимпийски игри, които се проведоха в Рио де Жанейро участваха над 206 страни с общ брой участници надвишаващ 11000.
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="post col-md-6">
-        <h2>България в Рио 2016</h2>
-        <div>
-            Тази година на олимпиадата България бе представена от 51 атлети, сред които Григор Димитров, Ивет Лалова, Цветана Пиронкова и др. Те участваха в общо 15 различни дисциплини.
-            Пълния списък с българските атлети, участвали в олимпиадата можете да намерите <a href="https://www.google.bg/?ion=1&espv=2#q=rio2016&mie=oly%2C%5B%22%2Fm%2F03tnk7%22%2C1%2C%22a%22%2C1%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C%22%2Fm%2F011v5wq5%22%2Cnull%2C%22%22%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2C0%5D">тук</a>.
-            
-        </div>
-    </div>
-    <img src="/Images/bulgaria_rio2016.jpg" alt="Bulgaria" height="160" width="248" align="bottom" />
-</div>
-
-<div class="row">
-    <div class="post col-md-6">
-        <h2>Git 2.8 Adds Security and Productivity Features</h2>       
-        <div>
-            &lt;p&gt;Version 2.8 of the open-source distributed version-control system Git has been released. The new ...
-        </div>
-    </div>
-</div>
 
