More player pictures and changes to Players page

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Players.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Players.cshtml
@@ -27,22 +27,63 @@
                     За първа година отбор на бежанците участва на Олимпиадата в Рио. 10 състезатели от Конго, Южен Судан, Сирия и Етиопия излязоха на откриването на Игрите под звуците на олимпийския химн и носейки олимпийския флаг. Идеята на отбора е много по-голяма от самата победа. Да послужи като символ на надеждата за милионите, които бягат от глад и война по целия свят.
                 </p>
             </div>
+
+            <h2>Светкавицата Болт удари девет пъти</h2>
+            <div>
+                <p>
+                    Юсейн Болт окончателно се бетонира като един от най-великите спортисти в историята. Ямайският спринтьор спечели трети златен требъл, след като на трета поредна олимпиада завоюва златните медали в бяганията на 100 м, 200 м и 4х100 м.
+                    Болт израни рекорда на американеца Карл Люис и финландеца Пааво Нуми за най-много олимпийски титли в леката атлетика. С по девет златни отличия са още американският плувец Марк Шпиц и съветската гимнастичка Лариса Латинина, а единственият човек с повече е Майкъл Фелпс.
+                </p>
+            </div>
+
+            <h2>Падна световният рекорд на Майкъл Джонсън</h2>
+            <div>
+                <p>
+                    Южноафриканецът Уейд ван Нийкерк спечели олимпийското злато на 400 метра в леката атлетика и подобри 17-годишния световен рекорд на на Майкъл Джонсън след велик финал в Рио. Времето на победителя е 43.03 секунди - с 15 стотни по-добро от това на американеца от световното първенство в Севиля през 1999 г.
+                </p>
+            </div>
+
+            <h2>Българските гимнастички влязоха във финала със седми резултат</h2>
+            <div>
+                <p>
+                    Българският национален ансамбъл се класира за финала на отборния многобой по художествена гимнастика в Рио де Жанейро.
+                    Възпитаничките на Ина Ананиева завършиха седми в квалификации след силно първо съчетание и доста по-слабо второ изпълнение на олимпийската сцена в "Рио Арена".
+                    Михаела Маевска, Християна Тодорова, Ренета Камберова, Цветелина Найденова и Любомира Казанова приключиха пресявките с общ резултат 34.182 точки.
+                    Българките се справиха много добре с изпълнението на пет ленти и получиха оценка 17.566 точки, което им отреди четвърто място във временното класиране. Те изоставаха само с 0.017 от заелия третата позиция ансамбъл на Беларус.
+                </p>
+            </div>
+
+            <h2>Дисквалификация, поправителен, победа</h2>
+            <div>
+                <p>
+                    Женската щафета на САЩ беше дисквалифицирана в сериите на 4х100 метра, но беше върната в състезанието и успя да стигне до златото. Американките получиха втори шанс, защото се оказа, че една от състезателките на Бразилия е попречила на Алисън Филикс да предаде на трети пост.
+                    За да се класират за финала, Филикс и съотборничките й трябваше да излязат сами на пистата в опит да подобрят резултата на влезлите с осми резултат китайките. Те очаквано нямаха проблем, а след това не оставиха шанс на съперничките в битката за титлата.
+                </p>
+            </div>
         </div>
 
 
         <div class="post col-md-6">
             <h2></h2>
             <div>
-                <img src="~/Images/rio2016logo.jpg" alt="logo" width="500" height="250" /><center><b>Логото на Рио 2016</b></center>
-            </div>
-            <h2></h2>
-            <div>
-
                 <img src="~/Images/bulgaria_rio2016.jpg" alt="Bulgaria" height="300" width="500" align="middle" /><center><b>Българските атлети, носещи знамето на България</b></center>
             </div>
+            
             <h2></h2>
             <div>
-                <img src="~/Images/otborbejanci.jpg" alt="fire" width="500" height="300" /><center><b>Част от отбора на бежанците</b></center>
+                <img src="~/Images/usainbolt.jpg" alt="Usain Bolt" width="500" height="300"/><center><b>Юсеин Болт</b></center>
+            </div>
+            <h2></h2>
+            <div>
+                <img src="~/Images/waydevanniekerk.jpg" alt="Wayde Van Niekerk" width="500" height="300"/><center><b>Уейд ван Нийкерк</b></center>
+            </div>
+            <h2></h2>
+            <div>
+                <img src="~/Images/bggimnastichki.jpg" alt="Bg otbor" width="500" height="250"/><center><b>Българските гимнастички</b></center>
+            </div>
+            <h2></h2>
+            <div>
+                <img src="~/Images/jenskashtafetaUSA.jpg" alt="USA otbor" width="500" height="300" /><center><b>Женската щафета на САЩ</b></center>
             </div>
         </div>
     </div>
