--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
@@ -9,7 +9,6 @@
 @using (Html.BeginForm("Create", "Photoalbums", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="form-horizontal">
-        <h4>Снимка</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -29,7 +28,7 @@
     </div>
 }
 <div>
-    @Html.ActionLink("Назад към снимки", "Index")
+    @Html.ActionLink("Обратно към снимки", "Index")
 </div>
 @section Scripts{
     @Scripts.Render("~/bundles/jqueryval")
