--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Index.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Index.cshtml
@@ -10,7 +10,7 @@
 <h2>Фотоалбум</h2>
 
 <p>
-    @Html.ActionLink("Качи снимки", "Create")
+    @Html.ActionLink("Добави снимкa", "Create")
 </p>
 
 <table>
@@ -23,7 +23,10 @@
                 @while (j < i + 4 && j < Model.Count())
                 {
                     <td>
-                        <img src="data:image/png;base64,@Convert.ToBase64String(Model[j].ImageData, 0, Model[j].ImageData.Length) " width="200" />
+                        <img src="data:image/png;base64,@Convert.ToBase64String(Model[j].ImageData, 0, Model[j].ImageData.Length) " width="200" height="200" />
+                        <br />
+                        @Html.ActionLink("Изтрий", "Delete", new { id = Model[j].ImageId })
+                        
                     </td>
                     j++;
                 }
