--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
@@ -8,7 +8,6 @@
 
 <h3>Сигурни ли сте, че желаете да изтриете това?</h3>
 <div>
-    <h4>Пост</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -42,7 +41,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Изтрий" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Обратно към Постове", "Index")
         </div>
     }
 </div>
