added preparation css

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -1,8 +1,1 @@
-﻿
-@{
-    ViewBag.Title = "Подготовка";
-}
-<body class="body-posts">
-    <h2>Подготовка за Рио2016</h2>
-
-</body>
+﻿<link href="~/Content/preparation.css" rel="stylesheet" />
