--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Index.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Index.cshtml
@@ -6,31 +6,32 @@
     ViewBag.Title = "Фотоалбум";
 }
 
+<body class="body-posts">
+    <h2>Фотоалбум</h2>
 
-<h2>Фотоалбум</h2>
+    <p>
+        @Html.ActionLink("Добави снимкa", "Create")
+    </p>
 
-<p>
-    @Html.ActionLink("Добави снимкa", "Create")
-</p>
-
-<table>
-    @{
-        int j = 0;
-        for (int i = 0; i < Model.Count(); i += 4)
-        {
-            j = i;
-            <tr>
-                @while (j < i + 4 && j < Model.Count())
+    <table>
+        @{
+            int j = 0;
+            for (int i = 0; i < Model.Count(); i += 4)
+            {
+                j = i;
+                <tr>
+                    @while (j < i + 4 && j < Model.Count())
                 {
-                    <td>
-                        <img src="data:image/png;base64,@Convert.ToBase64String(Model[j].ImageData, 0, Model[j].ImageData.Length) " width="200" height="200" />
-                        <br />
-                        @Html.ActionLink("Изтрий", "Delete", new { id = Model[j].ImageId })
-                        
-                    </td>
-                    j++;
-                }
-            </tr>
+                        <td>
+                            <img src="data:image/png;base64,@Convert.ToBase64String(Model[j].ImageData, 0, Model[j].ImageData.Length) " width="200" height="200" />
+                            <br />
+                            @Html.ActionLink("Изтрий", "Delete", new { id = Model[j].ImageId })
+
+                        </td>
+                        j++;
+                    }
+                </tr>
+            }
         }
-    }
-</table>
+    </table>
+</body>
