--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
@@ -3,37 +3,37 @@
 @{
     ViewBag.Title = "Create";
 }
+<body class="body-posts">
+    <h2>Качване на нова снимка</h2>
 
-<h2>Качване на нова снимка</h2>
+    @using (Html.BeginForm("Create", "Photoalbums", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        <div class="form-horizontal">
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @{string Снимка = "";}
+                @Html.LabelFor(model => Снимка, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.File, new { @class = "form-control", type = "file" })
+                    @Html.ValidationMessageFor(model => model.FileName, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-@using (Html.BeginForm("Create", "Photoalbums", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @{string Снимка = "";}
-            @Html.LabelFor(model => Снимка, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.File, new { @class = "form-control", type = "file" })
-                @Html.ValidationMessageFor(model => model.FileName, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Качване" class="btn btn-default" />
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Качване" class="btn btn-default" />
-            </div>
-        </div>
+                    }
+    <div>
+        @Html.ActionLink("Обратно към снимки", "Index")
     </div>
-}
-<div>
-    @Html.ActionLink("Обратно към снимки", "Index")
-</div>
-@section Scripts{
-    @Scripts.Render("~/bundles/jqueryval")
-}
-
+    @section Scripts{
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+</body>
 
 
 
