Calendar on posts
Date in posts is inputted through a calendar. If date is empty Date.Now
is defaulted.

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Участници";
 }
-<div class="row">
+<div class="row preparation-content">
     <div class="col-md-4">
         <div class="preparation-text-content">
             <h2>Political turmoil</h2>
@@ -57,7 +57,7 @@
                     Olympic ticket prices range from 40 Brazilian reais (£8) to 4,600 reais (£907), while officials say that Brazilians usually purchase tickets at the last minute and that there will be a late uptake in sales. There has not been the same level of protests as witnessed before the 2014 World Cup but it is fair to say that the Games do not have total support from Brazilians. Evicted residents from the Vila Autódromo favela – making way for the Olympic Park – protested in the streets, while the decision to build the golf course on an Area of Environmental Protection angered local campaigners.
                 </p>
             </div>
-            <hr />
+            <hr/>
             <h2>Russia’s athletics ban</h2>
             <div>
                 <p>
@@ -72,13 +72,13 @@
             <img src="~/Images/Podgotovka 1.jpg"/>
         </div>
         <div>
-            <img src="~/Images/Podgotovka 2.jpg" />
+            <img src="~/Images/Podgotovka 2.jpg"/>
         </div>
         <div>
-            <img src="~/Images/Podgotovka 4.jpg" />
+            <img src="~/Images/Podgotovka 4.jpg"/>
         </div>
         <div>
-            <img src="~/Images/Podgotovka 5.jpg" />
+            <img src="~/Images/Podgotovka 5.jpg"/>
         </div>
     </div>
 </div>
