--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Create.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Създай нов пост</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Posts", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     
@@ -31,7 +31,13 @@
             </div>
         </div>
 
-        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", id = "postDate" } })
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -40,6 +46,14 @@
         </div>
     </div>
 }
+
+<script type="text/javascript">
+        $(function () {
+            $('#postDate').datetimepicker({
+                format: 'YYYY/MM/DD hh:ss'
+            });
+        });
+</script>
 
 <div>
     @Html.ActionLink("Обратно към Публикации", "Index")
