Background of Preparation page is changed

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -82,3 +82,6 @@
         </div>
     </div>
 </div>
+<script>
+    $("body").css("background-image", "url('../Images/rio_2016_summer_olympics-HD-2.jpg')");
+</script>
