--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     <li>@Html.ActionLink("Участници", "Players", "Home")</li>
                     <li>@Html.ActionLink("История", "History", "Home")</li>
                     <li>@Html.ActionLink("Подготовка", "Preparation", "Home")</li>
+                    <li>@Html.ActionLink("Търсене", "Search.aspx", "SearchEngine")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
