--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Delete.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Delete.cshtml
@@ -7,11 +7,10 @@
 
     <h3>Сигурни ли сте, че желаете да изтриете това?</h3>
     <div>
-        <h4>Пост</h4>
         <hr />
         <dl class="dl-horizontal">
             <dd>
-                @Html.DisplayFor(model => model.ImageData)
+                <img src="data:image/png;base64,@Convert.ToBase64String(Model.ImageData, 0, Model.ImageData.Length) " width="200" height="200" />
             </dd>
         </dl>
         @using (Html.BeginForm())
