--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Участници";
 }
 <div class="row preparation-content">
-    <div class="col-md-4">
+    <div class="post col-md-4">
         <div class="preparation-text-content">
             <h2>Political turmoil</h2>
             <div>
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="post col-md-4">
         <div class="preparation-text-content">
             <h2>Pollution at sailing venue</h2>
             <div>
