Some visual changes

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
-<body class="body-posts">
+<body class="body">
     <h2>Качване на нова снимка</h2>
 
     @using (Html.BeginForm("Create", "Photoalbums", FormMethod.Post, new { enctype = "multipart/form-data" }))
