--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Index.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Index.cshtml
@@ -7,13 +7,13 @@
     ViewBag.Title = "Фотоалбум";
 }
 
-<body class="body-posts">
+<body class="body">
     <h2>Фотоалбум</h2>
-
+    
     <p>
         @Html.ActionLink("Добави снимкa", "Create")
     </p>
-
+    <hr />  
     <table>
         @{
             int j = 0;
