--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/View.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/View.cshtml
@@ -2,14 +2,13 @@
 @{
     ViewBag.Title = "View";
 }
-
-<h2>Преглед</h2>
-<hr/>
-<div>
-    <img src="data:image/png;base64,@Convert.ToBase64String(Model.ImageData, 0, Model.ImageData.Length) " width="100%" height="100%" />
-</div>
-
-<div class="form-actions no-color">
-    @Html.ActionLink("Обратно към снимки", "Index")
-</div>
-
+<body class="body-posts">
+    <h2>Преглед</h2>
+    <hr />
+    <div class="form-actions no-color">
+        @Html.ActionLink("Обратно към снимки", "Index")
+    </div>
+    <div>
+        <img src="data:image/png;base64,@Convert.ToBase64String(Model.ImageData, 0, Model.ImageData.Length) " width="100%" height="100%" />
+    </div>
+</body>
