--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
@@ -11,7 +11,8 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
+            @{string Заглавие = "";}
+            @Html.DisplayNameFor(model => Заглавие)
         </dt>
 
         <dd>
@@ -19,7 +20,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Body)
+            @{string Съдържание = "";}
+            @Html.DisplayNameFor(model => Съдържание)
         </dt>
 
         <dd>
@@ -27,7 +29,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Date)
+            @{string Дата = "";}
+            @Html.DisplayNameFor(model => Дата)
         </dt>
 
         <dd>
