--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Delete.cshtml
@@ -11,8 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @{string Заглавие = "";}
-            @Html.DisplayNameFor(model => Заглавие)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
 
         <dd>
@@ -20,8 +19,7 @@
         </dd>
 
         <dt>
-            @{string Съдържание = "";}
-            @Html.DisplayNameFor(model => Съдържание)
+            @Html.DisplayNameFor(model => model.Body)
         </dt>
 
         <dd>
@@ -29,8 +27,7 @@
         </dd>
 
         <dt>
-            @{string Дата = "";}
-            @Html.DisplayNameFor(model => Дата)
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
 
         <dd>
