--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Photoalbums/Create.cshtml
@@ -12,8 +12,7 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @{string Снимка = "";}
-                @Html.LabelFor(model => Снимка, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.File, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.File, new { @class = "form-control", type = "file" })
                     @Html.ValidationMessageFor(model => model.FileName, "", new { @class = "text-danger" })
