--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Create.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Posts/Create.cshtml
@@ -16,8 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @{string Заглавие = "";}
-            @Html.LabelFor(model => Заглавие, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
@@ -25,8 +24,7 @@
         </div>
 
         <div class="form-group">
-            @{string Съдържание = "";}
-            @Html.LabelFor(model => Съдържание, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
@@ -34,8 +32,7 @@
         </div>
 
         <div class="form-group">
-            @{string Дата = "";}
-            @Html.LabelFor(model => Дата, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", id = "postDate" } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
