--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Content/bootstrap.css
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Content/bootstrap.css
@@ -355,13 +355,13 @@ textarea {
 }
 
 a {
-  color: #428bca;
+  color: #333333;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: #000;
   text-decoration: underline;
 }
 
